<resources>
    <string name="app_name">KeepAccount</string>
    <string name="classify">分类</string>
    <string name="account">账户</string>
    <string name="note">备注</string>
    <string name="finish">完成</string>
    <string name="today">今日</string>
    <string name="billingDetails">账单明细</string>
    <string name="calendarView">日历视图</string>
    <string name="chartStatistics">图表统计</string>
    <string name="badge">徽章</string>
    <string name="setting">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="inCome">收入</string>
    <string name="expenditure">支出</string>
    <string name="search">搜索</string>
    <string name="filter">筛选</string>
    <string name="classifyManager">分类管理</string>
    <string name="accountManager">账号管理</string>
    <string name="voiceSwitch">声音开关</string>
    <string name="invateFriends">邀请好友</string>
    <string name="feedBack">评价我们</string>
    <string name="signOut">退出登录</string>
    <string name="billifilter">账单筛选</string>
    <string name="zhankai">展开</string>
    <string name="cash">现金</string>
    <string name="moneysize">金额</string>
    <string name="zuidijia">最低价</string>
    <string name="zuigaojia">最高价</string>
    <string name="reset">重置</string>
    <string name="inputWhatUWantSearch">输入你想搜索的内容</string>
    <string name="cancel">取消</string>
    <string name="addNewAccount">添加新账号</string>
    <string name="inputMoney">输入金额</string>
    <string name="_0_00">0.00</string>
    <string name="food">餐饮</string>
    <string name="beizhu">备注</string>
    <string name="clear">清除</string>
    <string name="shopping">购物</string>
    <string name="deleteAccount">删除账号</string>
    <string name="addANewAccount">请输入新的账户名称:</string>
    <string name="pc">电脑</string>
    <string name="add100">+100</string>
    <string name="sure">确定</string>
    <string name="noData">暂无数据</string>
    <string name="deleteAllData">删除数据</string>
</resources>
