<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/topMoney">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/inputMoney"
            android:layout_marginStart="25dp"
            android:layout_gravity="center"/>

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:background="@color/greyLine"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/keepAccount_recycle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">
        </android.support.v7.widget.RecyclerView>


    </LinearLayout>


    <EditText
        android:id="@+id/keepAccount_money"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textCursorDrawable="@drawable/grey_cursor"
        android:hint="@string/_0_00"
        android:textSize="36sp"
        android:inputType="number"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classify"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:id="@+id/keepAccount_classify"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyLine" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beizhu"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:background="@color/topMoney"
            android:id="@+id/keepAccount_beizhu"/>

        <Button
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:textSize="14sp"
            android:textColor="@color/topMoney"
            android:text="@string/finish"
            android:layout_marginStart="20dp"
            android:background="@drawable/bluebutton"
            android:gravity="center"
            android:id="@+id/keepaccount_clear"
            android:layout_gravity="end"/>

    </LinearLayout>






</LinearLayout>