<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perfay.keepaccount.module.BillingDetails.ui.SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/edittext"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/inputWhatUWantSearch"
                android:layout_marginStart="18dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:background="@color/topMoney"
                android:id="@+id/searchActivity_edt"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_close"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:id="@+id/search_cancel"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="@color/topMoney"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:id="@+id/searchActivity_sure"/>
        
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/noData"
        android:gravity="center"
        android:id="@+id/searchNoData"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:id="@+id/searchActivity_recycle">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
